# beanstalk

./: .aiignore  .gitattributes  .gitignore  AGENTS.md  BORROW_ERROR_REFACTORING_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  PLACE_INTERNING_IMPLEMENTATION_SUMMARY.md  README.md  backend_cleanup_action_plan.md  baseline_analysis.md  benchmark-root-single-file.bst  build_errors.txt  detailed_function_analysis.md  for_LLMs.md  index.md  justfile  migrate_print_to_template.py  speed-test.bst  test.bst  test.html  test.js  test_failure_analysis.md  test_js_output.bst  test_js_output.js  test_regression_analysis_summary.md  test_simple_func.bst  validation_report.md
.github/workflows/: release.yml  static.yml  validate.yml
benchmarks/: README.md  borrow-stress.bst  cases.txt  collection-stress.bst  environment-stress.bst  fold-stress.bst  frontend-cases.txt  frontend-optimization-results.md  pattern-stress.bst  speed-test.bst  template-stress.bst  type-stress.bst
benchmarks/adversarial/: collection-map-borrow-churn.bst  constant-dag-churn.bst  (+5 more)
docs/: #config.bs  #config.bst  Beanstalk Build System Architecture.md  Beanstalk Compiler Codebase Style Guide.md  Beanstalk Compiler Design Overview.md  Beanstalk Compiler Development Guide.md  Beanstalk Language Overview.md  Beanstalk Memory Management.md  Borrow Checker Design.md  HIR and LIR design overview.md  Structure Steering Document.md  Wasm Codegen Overview.md  build-system-design.md  build-system-io-contract.md  codebase-style-guide.md  compiler-data-layout-design.md  compiler-design-overview.md  compiler-generic-type-model.md  config.bst  host-functions.md  integration-assertion-modes.md  language-overview.md  language-surface-integration-matrix.md  memory-management-design.md  roadmap.md  wasix-function-addition-guide.md  wasix-integration-architecture.md  wasix-roadmap.md  wasix_research_findings.md  wir-module-organization.md
libraries/: collections.bst
src/: bs_types.rs  build.rs  cli.rs  compiler.rs  compiler_tests.rs  create_new_project.rs  dev_server.rs  file_output.rs  install.ps1  install.sh  lib.rs  main.rs  module_dependencies.rs  settings.rs  test.rs  timing.rs  tokenize_scene.rs  tokenizer.rs  tokens.rs
tests/: #config.bst  compiler_tests.rs
xtask/: Cargo.toml
(+6493 files in other folders)
