[features]
detailed_timers = []
show_tokens = []
show_headers = []
show_ast = []
show_eval = []
show_hir = []
show_codegen = []
show_borrow_checker = []

[package]
name = "beanstalk"
version = "0.0.1-alpha"
edition = "2024"

[[bin]]
name = "bst"
path = "src/main.rs"

[dependencies]
rustc-hash = "2.1.1"
saying = "0.1.7"

# For future release builds:
# oxc_minifier = "0.115.0"


[dev-dependencies]

[profile.release]
debug = true
