[features]
# These add println! macros for debugging and info when compiling
detailed_timers = []
show_tokens = []
show_headers = []
show_ast = []
show_eval = []
show_hir = []
show_codegen = []
show_borrow_checker = []
checked_blocks = []
async_blocks = []

[package]
name = "beanstalk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bean"
path = "src/main.rs"

[dependencies]
rayon = "1.12"
rustc-hash = "2.1.1"
saying = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.1.2"
wasm-encoder = "0.247.0"
wasmparser = "0.247.0"
notify = "8.2.0"

# For future release builds:
# oxc_minifier = "0.115.0"

[dev-dependencies]
tempfile = "3"
proptest = "1.5"

[profile.release]
debug = true
